TIKA-4854 - skip an oversized thumbnail instead of emitting it truncated